# rvllm

./: Cargo.toml  Dockerfile  Dockerfile.validate  Makefile  README.md  gen-viz.sh  install.sh  x-post.txt
bench/: bench_cutlass.sh  bench_long_context.sh  compare_vllm.sh  loadtest.py  loadtest.sh  quick_bench.sh  run.sh  verify_fusion.sh
crates/rvllm-api/src/routes/: responses.rs
crates/rvllm-api/src/types/: responses.rs
crates/rvllm-attention/: Cargo.toml
crates/rvllm-attention/src/: backend.rs  flash_attention_impl.rs  lib.rs  mla.rs  paged_attention_cuda.rs
crates/rvllm-autotune/: Cargo.toml
crates/rvllm-autotune/src/: cache.rs  lib.rs  profiler.rs  ranker.rs  sweeper.rs
crates/rvllm-block-manager/: Cargo.toml
crates/rvllm-block-manager/benches/: block_manager.rs
crates/rvllm-block-manager/src/: manager.rs
crates/rvllm-config/src/: cache.rs  cli.rs  lib.rs  model.rs  validation.rs
crates/rvllm-core/src/: types.rs
crates/rvllm-engine/: Cargo.toml
crates/rvllm-engine/src/: async_gpu_engine.rs  beam_search.rs  best_of_n.rs  gpu_engine.rs  lib.rs  output.rs
crates/rvllm-fusion/: Cargo.toml
crates/rvllm-fusion/src/: jit.rs  lib.rs  llvm_backend.rs  ptx_emit.rs
crates/rvllm-gpu/: Cargo.toml  build.rs
crates/rvllm-gpu/src/: autotune_cache.rs  buffer.rs  cublas.rs  cublas_autotune.rs  cublas_ops.rs  cublaslt_ops.rs  cuda_allocator.rs  cuda_graph.rs  device.rs  fp8_quantize.rs  kernel_loader.rs  l2_cache.rs  lib.rs  persistent_v2_ffi.rs  pinned_memory.rs  stream.rs
crates/rvllm-kv-cache/: Cargo.toml
crates/rvllm-kv-cache/src/: engine_cuda.rs  ops_cuda.rs
crates/rvllm-model-loader/: Cargo.toml
crates/rvllm-model-loader/src/: gpu_loader.rs  gpu_weights.rs
crates/rvllm-model-runner/: Cargo.toml  README.md
crates/rvllm-model-runner/src/: gpu_layer.rs  gpu_runner.rs  lib.rs  runner.rs
crates/rvllm-model-runner/src/architectures/: cohere.rs  deepseek.rs  embedding.rs  gemma.rs  gemma4.rs  gpt_neox.rs  llama.rs  mistral.rs  mixtral.rs  mod.rs  phi.rs  qwen2.rs
crates/rvllm-model-runner/src/gpu_layer/: batched.rs  decode.rs  mod.rs
crates/rvllm-model-runner/src/layers/: activation_cuda.rs  fused_ops.rs  linear_cuda.rs  norm_cuda.rs  rotary.rs  rotary_cuda.rs  softmax_cuda.rs
crates/rvllm-python/src/: lib.rs
crates/rvllm-quant/src/: gemm.rs  lib.rs  linear.rs  method.rs
crates/rvllm-quant/src/dequant/: mod.rs  mxfp8.rs
crates/rvllm-sampling/: Cargo.toml
crates/rvllm-sampling/benches/: sampling.rs
crates/rvllm-sampling/src/: logit_processors.rs  sampler.rs
crates/rvllm-scheduler/src/: outputs.rs  policy.rs  scheduler.rs
crates/rvllm-server/: Cargo.toml
crates/rvllm-server/src/: main.rs
crates/rvllm-tokenizer/src/: tool_parser.rs
crates/rvllm-tp/src/: lib.rs  tp_runner.rs  tp_worker.rs
crates/rvllm-worker/: Cargo.toml
crates/rvllm-worker/src/: config.rs  gpu_worker.rs  worker.rs
crates/rvllm-zig/: build.rs
crates/rvllm-zig/src/: lib.rs
deploy/: .instance_id_rvllm  bench.sh  benchmark_client.py  deploy_and_bench.sh  rsync_and_run.sh  rvllm_idle_vram.txt  rvllm_lite_idle_vram.txt  rvllm_lite_idle_vram_aligned.txt  rvllm_lite_post_http_vram.txt  rvllm_lite_post_http_vram_aligned.txt  rvllm_post_http_vram.txt  setup_instance.sh  vastai-deploy.sh  vllm_idle_vram.txt  vllm_post_http_vram.txt
docs/: arch.md  benchmark-history.md  close-the-gap-spec.md  cudarc-upgrade-spec.md  current-forward-model.md  git-viz.html  index.html  optimization-plan-direct-engine.md  optimization-roadmap.md  profiling.md  update-log.md  vast-ai-setup.md
docs/paper/: rvllm-body.tex
kernels/: argmax_f16.cu  copy_blocks_f16.cu  cutlass_qkv_bias.cu  embedding_gather_f16.cu  flash_attention.cu  flash_attention_3_v3.cu  fused_add_norm_gateup_gemv.cu  fused_add_norm_qkv_gemv.cu  fused_oproj_add_norm_gateup_gemv.cu  fused_residual_rmsnorm_f16.cu  fused_rope_cache.cu  fused_silu_down_gemv.cu  megakernel_decode.cu  persistent_layer_v3.cu  reshape_and_cache.cu  reshape_and_cache_f16.cu  rotary_embedding.cu  rotary_embedding_f16.cu  softmax.cu
rvllm-lite/: README.md  bench.py  deploy.sh  pyproject.toml
rvllm-lite/rvllm_lite/: __init__.py  __main__.py  config.py  sequence.py
rvllm-lite/rvllm_lite/api/: app.py
rvllm-lite/rvllm_lite/engine/: __init__.py
rvllm-lite/rvllm_lite/executor/: __init__.py
rvllm-lite/rvllm_lite/scheduler/: __init__.py
rvllm-lite/rvllm_lite/worker/: __init__.py
scripts/: publish.sh  smoke_test.sh  validate-local.sh
zig/src/: simd_math.zig
