[project]
name = "rvllm-lite"
version = "0.1.0"
description = "rvLLM serving architecture with vLLM model execution"
requires-python = ">=3.10"
authors = [{name = "m0at"}]
license = {text = "Apache-2.0"}
dependencies = [
    "vllm>=0.8.0",
    "torch>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "tokenizers>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
rvllm-lite = "rvllm_lite.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rvllm_lite*"]
