[package]
name = "rvllm-attention"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Attention kernels and backends for the rvLLM inference engine"
keywords = ["llm", "inference", "attention", "flash-attention", "vllm"]
categories = ["science", "hardware-support"]

[features]
default = []
cuda = ["rvllm-gpu/cuda", "dep:cudarc"]

[dependencies]
rvllm-core.workspace = true
rvllm-gpu.workspace = true
# rvllm-kv-cache removed: gpu module was deleted upstream; GpuBuffer now local
# TODO: re-add once rvllm-kv-cache compiles with rvllm-gpu buffer types
thiserror.workspace = true
half.workspace = true
tracing.workspace = true
cudarc = { version = "0.19", features = ["driver", "cublas", "cuda-version-from-build-system"], optional = true }
