[package]
name = "rvllm-autotune"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CUPTI-based profile-guided kernel autotuning for rvLLM"

[features]
default = []
cuda = ["rvllm-gpu/cuda"]

[dependencies]
rvllm-core.workspace = true
rvllm-gpu.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
