[package]
name = "rvllm-fusion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kernel fusion IR and compiler for rvLLM"
authors.workspace = true

[dependencies]
inkwell = { version = "0.8", features = ["llvm20-1", "target-nvptx"] }
serde = { version = "1", features = ["derive"] }
tracing.workspace = true
